<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_name_hint"
        android:padding="12dp"
        android:textSize="20sp"
        android:ems="10" >
        <requestFocus /> 
     </EditText>

    <TextView
        android:id="@+id/ingredients_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="12dp"
        android:text="@string/ingredients"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/recipe_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="5dp"
        android:textSize="15sp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/ingredients_hint" />

    <TextView
        android:id="@+id/instructions_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/instructions"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/recipe_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="5dp"
        android:textSize="15sp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/instructions_hint" />

</LinearLayout>