<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE6CC"
    android:orientation="vertical"
    android:textAlignment="center" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:text="@string/choose_add_option"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp" >

        <Button
            android:id="@+id/button3"
            style="@style/btnStyleAcapulco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick1"
            android:text="@string/add_from_scratch" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp" >

        <Button
            android:id="@+id/button4"
            style="@style/btnStyleAcapulco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick2"
            android:text="@string/add_from_internet" />
    </LinearLayout>

</LinearLayout>