<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recipe"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFE6CC" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/recipe_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_desc" />

        <TextView
            android:id="@+id/ingredients_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/ingredients"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="5dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/instructions_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/instructions"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recipe_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="5dp"
            android:textSize="15sp" />
    </LinearLayout>

</ScrollView>